# ccode

./: # DotTalk++ API Map.txt  # DotTalk++ To-Do List.txt  .gitattributes  .gitignore  AddPydotTalkIfPresent.cmake  CHANGELOG.md  CHANGELOGv1.md  CMakeLists.txt  CMakeLists.txt.bak  CONTRIBUTING.md  DotTalkPP_User_Manual_Alpha_v5.docx  DotTalkPP_alpha3_ReleaseNotes.docx  DotTalk_Flow_Diagrams_README.docx  DotTalk_Phase1A_Status_Introspection.docx  For MEMO fields.txt  Make-ParserDebugZip-Fast.ps1  Make-ParserDebugZip.ps1  Makefile  README.md  README.txt  README_BrowseTUI_V2.txt  README_HELP_SYNC.txt  README_KeyLess_Fix.txt  README_TESTING.md  README_xindex_port_phase2.md  Release_Notes_Alpha_v4.5.md  Test-All.ps1  ```cpp.txt  books.dbf  bool CommandRegistryrun(xbaseDbArea.txt  build.ps1  build_all.ps1  build_clean.ps1  build_tests.ps1  build_with_indexon.ps1  bundle_code.ps1  cat  ~wsl_build_dottalkpp.sh 'EOF'.txt  chrome wsl dottalk workflow.txt  classes.dbf  cmd_index.cpp  (+51 more)
.github/: CODEOWNERS  (+1 more)
_bundles/ccode-sources-alpha-4.2-20250829-123451/: CMakeLists.txt  build.ps1  bundle_code.ps1  bundle_sources.ps1  copilot_complete_rebuild.ps1  datarun.ps1  make_parser_debug_zip.ps1  rebuild_ccode.ps1  run_all_testsv2.ps1  run_phase1a_tests.ps1
_bundles/ccode-sources-alpha-4.2-20250829-123451/include/: colors.hpp  command_registry.hpp  scan.hpp  scan_options.hpp  utils.hpp  xbase.hpp
_bundles/ccode-sources-alpha-4.2-20250829-123451/include/xindex/: attach.hpp  dbarea_config.hpp
_bundles/ccode-sources-alpha-4.2-20250829-123451/patches/: cmd_locate_add_for_example.cpp
_bundles/ccode-sources-alpha-4.2-20250829-123451/src/cli/: cmd_ascend.cpp  cmd_bang.cpp  cmd_close.cpp  cmd_copy.cpp  cmd_count.cpp  cmd_create.cpp  cmd_dotscript.cpp  cmd_dump.cpp  cmd_fields.cpp  cmd_help_predicates.cpp  cmd_list.cpp  cmd_locate.cpp  cmd_order.cpp  cmd_recno.cpp  cmd_refresh.cpp  cmd_replace.cpp  cmd_scan.cpp  cmd_setcase.cpp  cmd_setindex.cpp  cmd_setorder.cpp  cmd_test.cpp  cmd_use.cpp  colors.cpp  command_registry.cpp  csv.cpp  foxref.cpp  parse_utils.hpp  shell_api.cpp
_bundles/ccode-sources-alpha-4.2-20250829-123451/src/xbase/: dbarea_introspection.cpp  dbf_file.cpp  record_view.cpp
_bundles/ccode-sources-alpha-4.2-20250829-123451/src/xindex/: dbarea_adapt.cpp  simple_index.cpp
_bundles/ccode-sources-alpha-4.2-20250829-123451/tests/: runsmoke.ps1
_bundles/ccode-sources-alpha-4.2-20250829-123451/tests/different/: datarun.ps1  find_seek_smoke.ps1
_bundles/ccode-sources-alpha-4.2-20250829-123451/tools/: fix-append-blank.ps1  run_script_ccode.ps1  shell - Copy.cpp1
bindings/pydottalk/: CMakeLists.txt
bindings/pydottalk/src/: module.cpp
src/cli/misc/: #include cmd_image_display.hpp.txt.maybewithpathresolution.txt  #include cmd_web.hpp.option.txt  #include path_resolve_util.hpp.txt.imageweb.txt  #pragma once.txt.imageweb.txt  ==================================.txt  A single‑line PowerShell search acr.txt  Added as the working Codex baseline.txt  Area Encapsulation.txt  Begin with the catalog..txt  CALC DATE() + 10.txt  CMakeLists.txt  Dottalk_Script.dtf.txt  Here is a cohesive, compile-ready i.txt  Interactive Prefilter.txt  Key takeaways from this shake-down.txt  Modern C++ port of classic xBase logic.txt  New Text Document.txt  README_DROPIN.txt  README_integration.txt  SCHEMAS CLOSE.txt  Self-register NEXTPREVIOUS (and NP.txt  Suggested additions  renames.txt  Suggested next small steps (if  whe.txt  To revoke Grok's access to your X a.txt  UBUNTU_BOOK.txt  add cursor gaurd.txt  alt_cmd_copy.cpp.txt  browse_io.cpp.classic.txt  calcwrite fix.txt  cmd_browse.cpp.v1.txt  cmd_browse.cpp.v2.txt  cmd_browser_header.txt  cmd_buildlmdb.cpp.neo.classic.txt  cmd_buildlmdb.cpp.temp.txt  cmd_calc.chatgpt.txt  cmd_calc.cpp.0130b.txt  cmd_calc.cpp.maybe.txt  cmd_calc.cpp.maybe2.txt  cmd_calc.cpp.neo.classic.txt  cmd_calcwrite.cpp.almost.txt  (+68 more)
src/memo/: CMakeLists.txt  cmake_install.cmake  memostore.cpp  memostore.cpp.classic.txt
src/xbase/: CMakeLists.txt  cmake_install.cmake  cursor_hook.cpp  dbarea.cpp  dbarea.cpp.classic.txt  dbarea_adapt.cpp  dbarea_introspection.cpp  dbarea_move_ops.cpp  dbf_file.cpp  dbf_file.cpp.classic.txt  dbf_file.cpp.x64.txt  fields.cpp  record_view.cpp  xbase_locks.cpp
src/xindex/: #include xindexcdx_meta.hpp.txt  CMakeLists.txt  attach.cpp  bpt_backend.cpp  bptree_backend.cpp  cdx_backend.cpp  cli_bridge.cpp  cli_wrapper.cpp  cli_wrapper.cpp.badname  cli_wrappers.cpp  cmake_install.cmake  cmd_index.cpp_warnings.txt  cnx_backend.cpp  code.lnk  common.cpp  dbarea_adapt.cpp  index_manager.cpp  index_managerment.cpp  index_tag.cpp  simple_index.cpp  simple_index_build_and_save.cpp
src/xindex/xindex/: index_manager.cpp  key_codec.cpp
tests/: #include xbase.hpp         -- Neede.txt  001_use_list.dot  001_use_list.txt  002_index_seek.dot  002_index_seek.txt  003_append_pack.txt  004_count.csv.dot  01_use_fields_list.dt  APPEND new.txt  Absolutely—here’s the full FoxPro b.txt  CMakeLists.txt  CTestTestfile.cmake  CommandRegistry.txt  DotTalk_Phase1A_test_sequence.txt  PS CUsersderalcodeccodedata cd ...txt  README_CHANGES_v2.txt  TEST .testscount_delete_roundtrip.t.txt  The LOCATE command in FoxPro (and V.txt  The `SET` command in FoxPro (and Vi.txt  USE dbf [NOINDEX]                 #.txt  case_functions.txt  ccode.lnk  cmake_install.cmake  combined_ccode_sources_hpp_cpp_2025_08_24.txt  combined_sources_alpha_4_2.txt  commit.txt  count_delete_roundtrip.txt  cpp_baseline_alpha4.2.txt  data type searches.txt  do_make_test_dbfs.prg  dot_talk_shakedown_script_paste_into_cli.txt  dot_talk_shakedown_script_v_2_paste_into_cli.txt  driver_nested.txt  flattened_sources.txt  foxpro_search_summary.txt  fwerdrddt.txt  locate_shakedown.txt  memo_append_replace.dot  memo_export_import.dot  parser_core.txt  (+12 more)
tests/different/: basic_append.txt  powershell -ExecutionPolicy Bypass.txt  smoke_full.txt
tests/dottalkpp-smoketests/: smoke_edit_pack.txt  smoke_foxhelp.txt  smoke_open_list.txt
tests/expected/: 05_guard_AppendNoOpen.golden.txt
tests/expr/: CMakeLists.txt  test_expr.cpp
(+915 files in other folders)
